Added sharing properties

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       name="description"
       content="Ohh! Wear | Making you feel beautiful, comfortable and powerful."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/ohlogov2.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -30,7 +30,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">    
     <!-- regular text -->
 
-    <title>React App</title>
+    <title>Ohh! Wear</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
